<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addButtonClicked"
            android:text="@string/string_add"
            app:layout_constraintRight_toLeftOf="@+id/button14"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteButtonClicked"
            android:text="@string/string_delete"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button13" />

        <EditText
            android:id="@+id/nameinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:layout_marginLeft="86dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="91dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="Name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameinput" />

        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="94dp"
            android:layout_marginStart="94dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="Name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity" />

        <TextView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:clickable="false"
            android:scrollbars="horizontal"
            android:text="@string/string_grocerylist"
            android:textSize="24sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/string_overallgrocerybalance"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/list"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_names"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameinput"
            app:layout_constraintRight_toLeftOf="@+id/nameinput"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_quantity"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/quantity"
            app:layout_constraintRight_toLeftOf="@+id/quantity"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cost"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/price"
            app:layout_constraintRight_toLeftOf="@+id/price"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/string_totalbalance"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/total"
            app:layout_constraintRight_toLeftOf="@+id/total" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
